--- a/server/api/botin/models/botin.settings.json
+++ b/server/api/botin/models/botin.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "botins",
   "info": {
-    "name": "botin"
+    "name": "botin",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -10,9 +11,6 @@
     "draftAndPublish": true
   },
   "attributes": {
-    "Marca": {
-      "type": "string"
-    },
     "images": {
       "collection": "file",
       "via": "related",
@@ -24,8 +22,44 @@
       "plugin": "upload",
       "required": false
     },
-    "Modelo": {
+    "modelo": {
       "type": "string"
+    },
+    "talles": {
+      "type": "json"
+    },
+    "tags": {
+      "type": "json"
+    },
+    "oferta": {
+      "type": "enumeration",
+      "enum": [
+        "urgente",
+        "liquidacion",
+        "oferta",
+        "oportunidad",
+        "normal"
+      ]
+    },
+    "tapa": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false
+    },
+    "marca": {
+      "type": "enumeration",
+      "enum": [
+        "nike",
+        "adidas",
+        "puma",
+        "otros"
+      ]
     }
   }
 }
